# Azuki

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  app-version.json  settings.json
.github/: pull_request_template.md
.github/workflows/: actions.yml
.superpowers/sdd/: final-review-fix-report.md  task-4-report.md  task-5-report.md
apps/: Azookey.WinUI.sln  Directory.Build.props
apps/Azookey.Core/: Azookey.Core.csproj  InternalsVisibleTo.cs
apps/Azookey.Core.Tests/: Azookey.Core.Tests.csproj
apps/Azookey.Core/Config/: AppConfig.cs  (+5 more)
apps/Azookey.Protos/: Azookey.Protos.csproj
apps/Azookey.Settings/: App.xaml.cs  Azookey.Settings.csproj  InternalsVisibleTo.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  SettingsApp.xaml
apps/Azookey.Settings.Tests/: Azookey.Settings.Tests.csproj
apps/Azookey.UI/: App.xaml  App.xaml.cs  Azookey.UI.csproj  InternalsVisibleTo.cs  Program.cs  UiHostStartupErrors.cs  UiWindowCoordinator.cs  WindowRenderPlan.cs
apps/Azookey.UI.Tests/: Azookey.UI.Tests.csproj
crates/client/: Cargo.toml
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs  zenzai_model_download.rs
crates/server/: Cargo.toml
crates/shared/: Cargo.toml  service.proto  window.proto
crates/shared/src/: default_romaji_table.txt  lib.rs  zenzai_models.rs
crates/ui/: Cargo.toml  README.md  build.rs
crates/ui/res/: ui.rc
crates/ui/src/: candidate.rs  candidate_ui.rs  geometry.rs  ipc.rs  lib.rs  main.rs  named_pipe.rs  ruby.rs  settings_model.rs  settings_ui.rs  state.rs  utils.rs  window_host.rs  winui.rs
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
installer/: AppVersion.iss  Azookey Startup.xml  CodeDependencies.iss  Installer.iss
scripts/: build-common.ps1  build-installer.ps1  build-ui.ps1  build-winui.ps1  gh_actions_build.ps1  post-build.ps1  sync-version.mjs  vm_build.sh  vm_prune_orphan_media.sh  vm_stage_for_manual_test.sh  vm_test_client_composition.sh  vm_test_updater.sh
server-swift/: Package.resolved  Package.swift
xtask/src/: args.rs  lib.rs  main.rs  plan.rs  runner.rs
(+115 files in other folders)
