[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
shared = { path = "../shared" }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "net", "io-util"] }

[dev-dependencies]
tempfile = "3.14.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
]
