[package]
name = "shared"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
prost = "0.13.4"
tonic = "0.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.14.0"

[build-dependencies]
tonic-build = "0.12.3"
